--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "salirezav",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://salirezav.github.io/salirezav.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.7",
     "@testing-library/react": "^11.2.2",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
