--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Seyed Alireza Vaezi's Portfolio",
-  "name": "Create React App Sample",
+  "short_name": "SAV's Portfolio",
+  "name": "Seyed Alireza Vaezi's Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
