Update dependencies in package.json and package-lock.json, add react-router and sharp, and modify index.html for new title and structure.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SAV's Portfolio",
+  "name": "Seyed Alireza Vaezi's Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
